2011-11-06  Darin Adler  <darin@apple.com>

        Leaks seen in RenderFlowThread::setRegionRangeForBox on Leaks bot
        https://bugs.webkit.org/show_bug.cgi?id=71260

        Reviewed by Mark Rowe.

        Memory leak fix covered by existing tests.

        * rendering/RenderFlowThread.cpp:
        (WebCore::RenderFlowThread::removeRenderBoxRegionInfo):
        Instead of calling remove, call take and then delete, since the
        values of the map are owned and need to be deleted when removed.

2011-11-06  Adam Barth  <abarth@webkit.org>

        Implement the sandbox directive for CSP
        https://bugs.webkit.org/show_bug.cgi?id=71604

        Reviewed by Sam Weinig.

        At TPAC, Microsoft was pushing pretty hard to add the sandbox directive
        to CSP.  There's a question about whether it's going to be in CSP 1.0
        or CSP 1.1, but it seems to be clearly headed into the spec.

        This patch implements the sandbox directive for CSP.  It's built on the
        same machinery we use for the sandbox attribute for iframe.  Now that
        I've done the implementation, I'm going to write up some concrete text
        for the spec.

        Tests: http/tests/security/contentSecurityPolicy/sandbox-allow-scripts-subframe.html
               http/tests/security/contentSecurityPolicy/sandbox-allow-scripts.html
               http/tests/security/contentSecurityPolicy/sandbox-empty-subframe.html
               http/tests/security/contentSecurityPolicy/sandbox-empty.html

        * page/ContentSecurityPolicy.cpp:
        (WebCore::ContentSecurityPolicy::ContentSecurityPolicy):
        (WebCore::ContentSecurityPolicy::applySandboxPolicy):
        (WebCore::ContentSecurityPolicy::addDirective):
        * page/ContentSecurityPolicy.h:

2011-11-03  Filip Pizlo  <fpizlo@apple.com>

        JSC should be able to sample itself in a more flexible way than just sampling flags
        https://bugs.webkit.org/show_bug.cgi?id=71522
